# 2024.2_G2_Funcional_Hasktal

./: CHANGELOG.md  Fractal.hs  LICENSE  Mandelbrot.hs  README.md  frac.hs  hasktal.cabal  package.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/33ca93fb/: cabal_macros.h
.stack-work/ghci/bb06bdd4/: cabal_macros.h
.stack-work/install/x86_64-linux/b43279356740514f316bbb741d409f49727acd5f958650b9af14fe100a20aaea/9.6.6/lib/x86_64-linux-ghc-9.6.6/hasktal-0.1.0.0-5dT2IVtbXByL64HoBaQs7q/: Koch.dyn_hi  Koch.hi  Paths_hasktal.hi  Sierpinski.dyn_hi
.stack-work/install/x86_64-linux/b43279356740514f316bbb741d409f49727acd5f958650b9af14fe100a20aaea/9.6.6/pkgdb/: hasktal-0.1.0.0-5dT2IVtbXByL64HoBaQs7q.conf  package.cache
app/: Main.hs
arvore-pitagoras/: arvore.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
docs/: descricaoFractais.md  descricaoFractaisbackup.md
estudos/: Fractal.hi  Fractal.hs  Mandelbrot.hi  julia.ppm  mandelbrot.ppm
src/: FractalTree.hs  HeighwayDragon.hs  Julia.hs  Koch.hs  Mandelbrot.hs  PythagorasTree.hs  Sierpinski.hs  SierpinskiCarpet.hs  Tree.hs
test/generate/: Main.hs  README.md
test/simple/: Fractals.hs  KochCurve.hs  Main.hs  Menu.hs  README.md  Simple.cabal  koch.hs
testes/generate/: Generate.cabal
testes/simple/: koch.hs
triangulo-sierpinski/: CHANGELOG.md  README.md  package.yaml  triangulo-sierpinski.cabal
triangulo-sierpinski/app/: Main.hs
triangulo-sierpinski/src/: Lib.hs  Sierpinski.hs
