name:                Simple
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable simple-exe
  main-is:           Main.hs
  hs-source-dirs:    .
  build-depends:     base >=4.7 && <5
                   , OpenGL
                   , GLUT >= 2.7.0.16
  default-language:   Haskell2010
