name:                Generate
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable generate-exe
  main-is:           Main.hs
  hs-source-dirs:    .
  build-depends:     base >=4.7 && <5
                   , gloss
                   , containers
                   , bytestring
  default-language:   Haskell2010
